[tool.poetry]
name = "vacancy-parser"
version = "0.1.0"
description = ""
authors = ["Dmitry <dima.captan@yandex.ru>"]
readme = "README.md"
packages = [{include = "vacancy_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
